resolved issues regarding responsiveness for mobile view

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     </header>
 
     <sectiion>
-        <div class="container-fluid">
+        <div class="container">
             <div class="row mt-5">
                 <h1 class="heading mt-5">
                     Tsks, just tasks<strong style="color: #fb6da9; font-weight: bold">.</strong>
@@ -49,7 +49,7 @@
     </sectiion>
 
     <main>
-        <div class="container-fluid">
+        <div class="container">
             <div class="row mt-5">
                 <div class="btn-container mt-4">
                     <a href="signup.html" class="btn btn-started">
