resolving responsiveness issues

--- a/collection.html
+++ b/collection.html
@@ -29,7 +29,7 @@
         </section>
     </header>
 
-    <main style="height: 100%;">
+    <main style="height: 100%; overflow-x: hidden; overflow-y: auto; width: 100%;">
 
         <section class="collection-content">
             <div class="container-fluid">
