--- a/collection.html
+++ b/collection.html
@@ -10,7 +10,7 @@
     <script defer src="./js/script.js"></script>
     <title>Tasks</title>
 </head>
-<body>
+<body style="padding-bottom: 20px;">
     <div id="coverCollection">
     </div>
     <header class="dash-header">
@@ -29,7 +29,7 @@
         </section>
     </header>
 
-    <main style="min-height: calc(100vh - 100px);">
+    <main style="min-height: 100%; overflow: hidden; position: relative;">
 
         <section class="collection-content">
             <div class="container-fluid">
@@ -195,10 +195,10 @@
     </main>
 
 
-    <footer class="dash-footer" style=" position:absolute;
-    bottom:0;
-    width:100%;
-    height:60px;">
+    <footer class="dash-footer" style="
+    position: absolute;
+    bottom: 0;
+    width: 100%;">
         <section class="container-fluid">
             <div class="row">
                 <div class="foot-dash-content-hold pt-3">
