fixed the issue of unwanted space appearing below the footer on mobile view

--- a/collection.html
+++ b/collection.html
@@ -195,10 +195,7 @@
     </main>
 
 
-    <footer class="dash-footer" style="
-    position: absolute;
-    bottom: 0;
-    width: 100%;">
+    <footer class="dash-footer">
         <section class="container-fluid">
             <div class="row">
                 <div class="foot-dash-content-hold pt-3">
